--- a/index.html
+++ b/index.html
@@ -1058,8 +1058,8 @@
             
             <div style="margin-top: 25px; padding-top: 25px; border-top: 1px solid var(--border-color);">
                 <p style="color: var(--text-muted); margin-bottom: 15px;">Don't have the password?</p>
-            <a href="https://t.me/zeoumin" target="_blank">   class="get-password-btn">
-                    <i class="fab fa-telegram"></i>GET PASSWORD FROM ADMIN
+                <a href="https://t.me/zeoumin" target="_blank" class="get-password-btn">
+                    <i class="fab fa-telegram"></i> GET PASSWORD FROM ADMIN
                 </a>
             </div>
         </div>
